src/test/deca/context/valid/128_Signature.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 1.00000e+00
// 
// Historique:
//    cree le 01/01/2022

class A {
	float f(float x) {
		return x;
	}
}
{
	A a = new A();
	println(a.f(1));
}
