src/test/deca/context/invalid/27_MultiDefField.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: can't defined field identifier several times in a class
// 
// Historique:
//    cree le 01/01/2022

class A {
	int x;
	// Doit etre refuse.
	int x = 1;
}
